<resources>
    <string name="app_name">DogApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Howard Ku</string>
    <string name="nav_header_subtitle">yku@ucdavis.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Results</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_camera">Camera</string>

    <string name="lip_camera">LipCamera</string>
    <string name="lip_photo">LipCamera</string>

    <string name="nix_sensor">NixSensor</string>


    <string name="loading_failed">Failed to load</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading</string>
    <string name="placeholder_success">Placeholder text</string>
    <string name="mars_photo">Mars photo</string>

    <string name="description_text">
        This app helps you monitor your dog health by analyzing photos of their favorite toy after playtime. Track your dog health status over time with detailed history records.
    </string>

    <string name="ready_text">
        Ready to begin? Click the green camera button to start the health check now!
    </string>
</resources>