<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.lipsensor.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >


<!--        <action-->
<!--            android:id="@+id/action_to_function"-->
<!--            app:destination="@id/nav_function" />-->

        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.lipsensor.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.lipsensor.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_slideshow_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.lipsensor.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_camera"
        android:name="com.example.lipsensor.ui.camera.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" >
        <action
            android:id="@+id/action_nav_camera_to_nav_gallery"
            app:destination="@id/nav_gallery" />
    </fragment>

    <activity
        android:id="@+id/nav_function"
        android:name="com.example.lipsensor.ui.camera.CameraActivity"
        android:label="@string/lip_camera"
        tools:layout="@layout/activity_camera" />

    <activity
        android:id="@+id/nav_preview"
        android:name="com.example.lipsensor.ui.camera.PreviewActivity"
        android:label="@string/lip_photo"
        tools:layout="@layout/activity_preview" />

    <!-- Define the action to navigate to CameraActivity -->
    <action
        android:id="@+id/global_action_to_function"
        app:destination="@id/nav_function" />
</navigation>